--- a/bin/templating/showdown.html
+++ b/bin/templating/showdown.html
@@ -134,6 +134,13 @@
             #menu-list {
                 margin-left: -30px;
             }
+            pre {
+                overflow: auto;
+                white-space: pre;
+                -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+                border: 1px solid lightgrey;
+                padding: 5px;
+            }
         </style>
     </head>
     <body>
