--- a/bin/templating/md-it.html
+++ b/bin/templating/md-it.html
@@ -182,13 +182,13 @@
             var list2 = document.querySelectorAll("h2")
             var list3 = document.querySelectorAll("h3")
             var links = []
-            for (i = 2; i < list.length; i++) {
+            for (i = 2; i < list1.length; i++) {
                 list1[i].id = list1[i].innerHTML.replaceAll(" ", "-")
             }
-            for (i = 0; i < list.length; i++) {
+            for (i = 0; i < list2.length; i++) {
                 list2[i].id = list2[i].innerHTML.replaceAll(" ", "-")
             }
-            for (i = 0; i < list.length; i++) {
+            for (i = 0; i < list3.length; i++) {
                 list3[i].id = list3[i].innerHTML.replaceAll(" ", "-")
             }
         </script>
