--- a/bin/templating/showdown.html
+++ b/bin/templating/showdown.html
@@ -156,7 +156,9 @@
             </div>
             
         </div>
-        <div style="display: none;" id="data"></div>
+        <script id="md">
+            var md
+        </script>
         <script src=" https://cdnjs.cloudflare.com/ajax/libs/showdown/1.9.1/showdown.min.js"></script>
         <script defer>
             setInterval(function() {
@@ -175,7 +177,6 @@
             }
             const data = document.getElementById("data")
             var rendr = new showdown.Converter();
-            var md = data.innerHTML
             var result = rendr.makeHtml(md)
             document.getElementById("content").innerHTML = result
             var list1 = document.querySelectorAll("h1")
